<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#FFFFFF"
    android:orientation="vertical"
    tools:context=".login.Login">

    <androidx.appcompat.widget.Toolbar
        android:background="@drawable/below_upperbar"
        android:paddingTop="20dp"
        android:layout_marginBottom="20dp"
        app:layout_constraintTop_toTopOf="parent"
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:textSize="22dp"
            android:textColor="#000000"
            android:text="회원가입"/>

        <Button
            android:textColor="#000000"
            android:background="#00FFFFFF"
            android:layout_width="70dp"
            android:layout_height="50dp"
            android:layout_gravity="right"
            android:textSize="15dp"
            android:id="@+id/btn_send"
            android:text="@string/send"/>
   </androidx.appcompat.widget.Toolbar>
    <LinearLayout

        android:layout_marginRight="30dp"
        android:layout_marginLeft="30dp"
        android:layout_marginBottom="10dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <LinearLayout
            android:layout_weight="1"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="bottom"
            android:orientation="horizontal">
            <TextView
                android:textColor="#000000"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/id"
                android:textSize="18dp"
                />

        </LinearLayout>
        <LinearLayout
            android:layout_weight="1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:gravity="right">
            <Button
                android:background="#55B1B1B1"
                android:textColor="#000000"
                android:layout_marginRight="15dp"
                android:textSize="13dp"
                android:id="@+id/idCheck"
                android:layout_width="75dp"
                android:layout_height="35dp"
                android:layout_gravity="right"
                android:text="중복 확인" />

        </LinearLayout>
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <EditText
            android:paddingRight="10dp"
            android:paddingBottom="5dp"
            android:paddingTop="5dp"
            android:paddingLeft="10dp"
            android:id="@+id/id_etc"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/id_message"
            android:layout_marginLeft="45dp"
            android:layout_marginRight="45dp"
            android:layout_marginBottom="20dp"
            android:textColorHint="#B1B1B1"
            android:textColor="#000000"
            android:background="@drawable/edittext"
            android:textSize="18dp"/>
    </LinearLayout>
    <LinearLayout
        android:layout_marginBottom="10dp"
        android:layout_marginRight="30dp"
        android:layout_marginLeft="30dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">
        <TextView
            android:layout_marginBottom="10dp"
            android:textColor="#000000"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/pwd"
            android:textSize="18dp"
            />

        <EditText
            android:paddingRight="10dp"
            android:paddingBottom="5dp"
            android:paddingTop="5dp"
            android:paddingLeft="10dp"
            android:layout_marginLeft="15dp"
            android:id="@+id/pwd_etc"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/pwd_message"
            android:textColorHint="#B1B1B1"
            android:background="@drawable/edittext"
            android:layout_marginBottom="10dp"
            android:layout_marginRight="15dp"
            android:textColor="#000000"
            android:password="true"
            android:textSize="18dp" />
    </LinearLayout>
    <LinearLayout
        android:layout_marginBottom="10dp"
        android:layout_marginRight="30dp"
        android:layout_marginLeft="30dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">
        <TextView
            android:layout_marginBottom="10dp"
            android:textColor="#000000"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/pwd2"
            android:textSize="18dp"
            />

        <EditText
            android:paddingRight="10dp"
            android:paddingBottom="5dp"
            android:paddingTop="5dp"
            android:paddingLeft="10dp"
            android:id="@+id/pwdok_etc"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="15dp"
            android:layout_marginRight="15dp"
            android:background="@drawable/edittext"
            android:textColorHint="#B1B1B1"
            android:hint="@string/pwd_message2"
            android:textColor="#000000"
            android:password="true"
            android:textSize="18dp" />

    </LinearLayout>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/pwdok_Text"
        android:gravity="center"
        android:visibility="invisible"
        android:textSize="15dp"
        android:text="확인"/>

    <LinearLayout
        android:layout_marginRight="30dp"
        android:layout_marginLeft="30dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">
        <TextView
            android:textColor="#000000"
            android:layout_marginBottom="10dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/nick"
            android:textSize="18dp"
            />
        <EditText
            android:background="@drawable/edittext"
            android:paddingRight="10dp"
            android:paddingBottom="5dp"
            android:paddingTop="5dp"
            android:paddingLeft="10dp"
            android:layout_marginLeft="15dp"
            android:layout_marginRight="15dp"
            android:id="@+id/nick_etc"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/nick_message"
            android:textColorHint="#B1B1B1"
            android:textColor="#000000"
            android:textSize="18dp"/>
    </LinearLayout>




</LinearLayout>