<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="#FFFFFF"
    tools:context=".login.FindId">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="20dp"
    android:background="@drawable/below_upperbar"
        android:paddingTop="20dp"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="아이디 찾기"
            android:textColor="#000000"
            android:textSize="22dp" />

        <Button
            android:id="@+id/btn_send"
            android:layout_width="70dp"
            android:layout_height="50dp"
            android:layout_gravity="right"
            android:background="#00FFFFFF"
            android:text="@string/send"
            android:textColor="#000000"
            android:textSize="15dp" />
    </androidx.appcompat.widget.Toolbar>

    <LinearLayout
        android:layout_marginBottom="10dp"
        android:layout_marginRight="30dp"
        android:layout_marginLeft="30dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <TextView
            android:layout_marginBottom="10dp"
            android:textColor="#000000"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/nick"
            android:textSize="18dp" />

        <EditText
            android:textColor="#000000"
            android:paddingRight="10dp"
            android:paddingBottom="5dp"
            android:paddingTop="5dp"
            android:paddingLeft="10dp"
            android:layout_marginLeft="15dp"
            android:layout_marginRight="15dp"
            android:textColorHint="#B1B1B1"
            android:id="@+id/nick_etc"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/nick_message"
            android:background="@drawable/edittext"
            android:textSize="18dp" />
    </LinearLayout>
</LinearLayout>